# djangoForums

./: .gitignore  manage.py  pyproject.toml
djangoForums/: asgi.py  settings.py  urls.py  wsgi.py
forums/: admin.py  forms.py  models.py  urls.py  views.py
forums/migrations/: 0001_initial.py  0002_post_post_id.py  0003_alter_post_post_id.py
static/: forum.scss  home.scss  main.scss  thread.scss  ui.scss
static/core/: base.scss  form.scss  home.scss  ui.scss
static/forums/: forum.scss  thread.scss
static/partials/: _colors.scss  _mixin.scss
static/users/: login.scss  logout.scss  profile.scss
templates/: base.html  forum.html  home.html  thread.html
templates/forums/: create_forum.html  create_thread.html  forum.html  thread.html
templates/registration/: login.html  register.html
templates/users/: login.html  logout.html  profile.html  register.html
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_profile_about_me.py
